[gd_scene load_steps=4 format=2]

[ext_resource path="res://default_styleboxtexture.tres" type="StyleBox" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Settings.gd" type="Script" id=3]

[node name="Settings" type="Node2D"]
script = ExtResource( 3 )

[node name="Holder" type="Label" parent="."]
margin_left = 52.0
margin_top = 68.0
margin_right = 464.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 129, 100 )
theme = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "Settings:"
align = 1

[node name="OkButton" type="Button" parent="Holder"]
margin_left = 147.0
margin_top = 112.0
margin_right = 258.0
margin_bottom = 127.0
focus_neighbour_bottom = NodePath("../PuzzleCheckerboard")
text = "Ok"

[node name="VSync" type="CheckBox" parent="Holder"]
margin_left = 141.0
margin_top = 17.0
margin_right = 199.0
margin_bottom = 37.0
focus_neighbour_top = NodePath("../OkButton")
pressed = true
text = "VSync"

[node name="PuzzleCheckerboard" type="CheckBox" parent="Holder"]
margin_left = 5.0
margin_top = 17.0
margin_right = 137.0
margin_bottom = 37.0
focus_neighbour_left = NodePath("../LabelSFX")
focus_neighbour_top = NodePath("../OkButton")
text = "Puzzle Checkerboard"

[node name="VirtualButtons" type="SpinBox" parent="Holder"]
margin_left = 121.0
margin_top = 58.0
margin_right = 195.0
margin_bottom = 82.0
focus_neighbour_left = NodePath("../MusicSlider")
max_value = 6.0
value = 1.0

[node name="PixelScale" type="SpinBox" parent="Holder"]
margin_left = 121.0
margin_top = 85.0
margin_right = 195.0
margin_bottom = 109.0
min_value = 1.0
value = 2.0

[node name="LabelResolutionMultiplier" type="Label" parent="Holder"]
margin_left = 20.0
margin_top = 90.0
margin_right = 116.0
margin_bottom = 101.0
text = "Resolution Multiplier"

[node name="LabelVirtualButtons" type="Label" parent="Holder"]
margin_left = 6.0
margin_top = 64.0
margin_right = 117.0
margin_bottom = 75.0
text = "Virtual Buttons Layout"

[node name="LabelSFX" type="Label" parent="Holder"]
margin_left = 293.0
margin_top = 20.0
margin_right = 385.0
margin_bottom = 31.0
text = "SFX Volume: 0 dB"

[node name="LabelFanfare" type="Label" parent="Holder"]
margin_left = 293.0
margin_top = 39.0
margin_right = 403.0
margin_bottom = 50.0
text = "Fanfare Volume: 0 dB"

[node name="LabelMusic" type="Label" parent="Holder"]
margin_left = 293.0
margin_top = 59.0
margin_right = 390.0
margin_bottom = 70.0
text = "Music Volume: 0 dB"

[node name="LabelAnimation" type="Label" parent="Holder"]
margin_left = 90.0
margin_top = 43.0
margin_right = 197.0
margin_bottom = 54.0
text = "Animation Speed: 1.0x"

[node name="SFXSlider" type="HSlider" parent="Holder"]
margin_left = 208.0
margin_top = 17.0
margin_right = 291.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../OkButton")
focus_neighbour_right = NodePath("../PuzzleCheckerboard")
min_value = -30.0
max_value = 10.0

[node name="FanfareSlider" type="HSlider" parent="Holder"]
margin_left = 208.0
margin_top = 37.0
margin_right = 291.0
margin_bottom = 53.0
focus_neighbour_right = NodePath("../AnimationSlider")
min_value = -30.0
max_value = 10.0

[node name="MusicSlider" type="HSlider" parent="Holder"]
margin_left = 208.0
margin_top = 57.0
margin_right = 291.0
margin_bottom = 73.0
focus_neighbour_right = NodePath("../LabelVirtualButtons")
min_value = -30.0
max_value = 10.0

[node name="AnimationSlider" type="HSlider" parent="Holder"]
margin_left = 5.0
margin_top = 41.0
margin_right = 88.0
margin_bottom = 57.0
focus_neighbour_left = NodePath("../LabelFanfare")
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Pointer" type="Sprite" parent="Holder"]
